radio button checked alignment isuue resolved

--- a/src/scss/filejet-scss/_bootstrap.scss
+++ b/src/scss/filejet-scss/_bootstrap.scss
@@ -2362,9 +2362,9 @@ textarea.form-control-lg {
 }
 
 .form-check-input {
-  width: rem(18);
-  height: rem(18);
-  margin-top: 0.25em;
+  width: 16px;
+  height: 16px;
+  // margin-top: 0.25em;
   vertical-align: top;
   background-color: #fff;
   background-repeat: no-repeat;
@@ -2408,10 +2408,11 @@ textarea.form-control-lg {
   content: "";
   background: var(--bs-purple);
   position: absolute;
-  top: 11%;
-  left: 11%;
-  width: 80%;
-  height: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 11px;
+  height: 11px;
   border-radius: 50%;
 }
 .form-check-input:checked[type=checkbox] {
